# RuSS

./: README.md  TODO.md  ]  index.html  package-lock.json  package.json  rss.txt  vite.config.ts
src/: App.vue  Feeds.vue  styles.css
src-tauri/: Cargo.toml  sources.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/feeds/: example.xml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: rss.rs
src/components/: RSS.vue  card.vue  feed.vue  feeds.vue  following.vue  reader.vue  setting.vue  settings.vue  sidebar.vue
src/components/settings/: about.vue  appearance.vue  general.vue
src/composables/: theme.ts
src/router/: index.js
src/views/: FocusView.vue
